--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <title></title>
     <link rel="stylesheet" href="css/style.css"/>
-
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <script data-main="js/main" src="js/libs/require/require.min.js"></script>
 </head>
 <body>
