--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <script data-main="js/main" src="js/libs/require/require.min.js"></script>
+    <script data-main="js/Main" src="js/libs/require/require.min.js"></script>
 </head>
 <body>
     <div id="page-wrapper">
         <div id="main-canvas-wrapper">
-            <canvas id="main-canvas"  width="800" height="600"></canvas>
+            <canvas id="main-canvas"  width="800" height="800"></canvas>
         </div>
     </div>
 </body>
